tests/baselines/reference/ComputedPropertyName11_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName11_es6.ts(2,7): error TS1005: ';' expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName11_es6.ts(2,8): error TS1109: Expression expected.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName11_es6.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName11_es6.ts (3 errors) ====
    class C {
       [e]();
          ~
!!! error TS1005: ';' expected.
           ~
!!! error TS1109: Expression expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.